Fixed some imaging problems, added some text for website for me (Matthew), and cleaned project folders

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>ChatGPT Efficiency Evaluation – Nasser</title>
+    <title>ChatGPT Efficiency Evaluation – Nasser, Matthew, Joshua</title>
 
     <meta name="author" content="Nasser Choudhri">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@
 
 
 <aside id="assistant">
-  <img src="chatbot.png" alt="Assistant" />
+  <img src="images/chatbot.png" alt="Assistant" />
   <p id="assistantText">Hi! I’m your project assistant.</p>
 </aside>
 
@@ -69,6 +69,35 @@
           <td style="padding:2.5%;width:40%;max-width:40%;">
             <img style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" 
                  alt="profile photo" src="images/JonBarron.jpg">
+          </td>
+        </tr>
+        <tr> 
+          <td style="padding:2.5%;width:63%;vertical-align:middle">
+            <p class="name" style="text-align: center;">
+              Matthew Llactahuamani
+            </p>
+
+            <p>
+              Hello, I am also currently a student at <strong>York University</strong> that is also in the course 
+              <strong>ITEC 4020</strong> and as Nasser stated above this is an evaluation of ChatGPT's overall efficiency
+              when queried with questions from CSV files
+            </p>
+            <p>
+              My role in this entire project was in charge of uploading files to our GitHub repository as our teammates had trouble
+              with their enviroment. I was also in charge of helping as <strong>full-stack (backend and frontend)</strong> with any 
+              troubles my members may have had. During our presentation, I'll explain how I managed the backend, created the database 
+              and other tasks I took upon during this time.
+            </p>
+            <p style="text-align:center">
+              <a href="mailto:mattl72@my.yorku.ca">Email</a>
+              &nbsp;/&nbsp;
+              <!--Need to add github here-->
+              <a href="#">GitHub</a> 
+            </p>
+          </td>
+          <td style="padding:2.5%;width:40%;max-width:40%;">
+            <img style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" 
+                 alt="profile photo" src="images/matthew_prof_pic.jpg">
           </td>
         </tr>
       </tbody>
@@ -136,11 +165,49 @@
     </div>
 
     <div class="pill-section">
-      <h3>What I Focus On</h3>
+      <h3>What I Focus On In The Project</h3>
       <ul>
         <li>Designing interfaces that are simple and easy to navigate.</li>
         <li>Making the front end and back end “talk” cleanly via APIs.</li>
         <li>Presenting data in a visual way that makes results easy to interpret.</li>
+      </ul>
+    </div>
+  </section>
+    <section style="max-width:800px;margin:40px auto 60px auto;">
+    <h2>About Me</h2>
+
+    <p><strong>Name:</strong> Matthew Llactahuamani</p>
+    <p><strong>Program:</strong> BA Hons Information Technology (ITEC), 4th Year — York University</p>
+
+    <p style="margin-top:16px;">
+      With future aspirations in the field of game development and overall developer roles, I am an avid coder who focuses mainly on obtaining knowledge 
+      and education within the field of technology. Although I hope to get into game development my skills are very adaptable,
+      as seen with my full-stack description in the home page. I enjoy difficult challenges when it comes to coding and happy 
+      that this projects tests my overall intelligence within the world of web development.
+    </p>
+
+    <div class="pill-section">
+      <h3>Technical Skills</h3>
+      <div class="pill-row">
+        <span class="pill">HTML &amp; CSS</span>
+        <span class="pill">JavaScript</span>
+        <span class="pill">Node.js &amp; Express</span>
+        <span class="pill">MongoDB</span>
+        <span class="pill">REST APIs</span>
+        <span class="pill">WebSockets</span>
+        <span class="pill">Java</span>
+        <span class="pill">Unity</span>
+        <span class="pill">C#</span>
+      </div>
+    </div>
+
+    <div class="pill-section">
+      <h3>What I Focus On In The Project</h3>
+      <ul>
+        <li>Creating comprehensive, concise, readable, well-documented code</li>
+        <li>Creating and advising the GitHub Repository</li>
+        <li>Fix and rewrite incohesive code</li>
+        <li>Creating back-end and communication</li>
       </ul>
     </div>
   </section>
@@ -149,8 +216,7 @@
 
 <div id="education" class="page" style="display:none;">
   <section style="max-width:800px;margin:40px auto 60px auto;">
-    <h2>Education</h2>
-
+    <h2>Education - Nasser Choudhri</h2>
     <p>
       I’m currently completing my fourth year in the <strong>BA Information Technology</strong> program
       at York University. The program combines software development, systems analysis, and human-computer
@@ -192,12 +258,50 @@
       </div>
     </div>
   </section>
+  <section style="max-width:800px;margin:40px auto 60px auto;">
+    <h2>Education - Matthew Llactahuamani</h2>
+    <p>
+      FILL IN TMR
+    </p>
+
+    <div class="timeline">
+      <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+          <h3>FILL IN TMR</h3>
+          <p>
+            FILL IN TMR
+          </p>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+          <h3>FILL IN TMR</h3>
+          <p>
+            FILL IN TMR
+          </p>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+          <h3>FILL IN TMR</h3>
+          <p>
+            FILL IN TMR
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
 
 
 <div id="experience" class="page" style="display:none;">
   <section style="max-width:800px;margin:40px auto 60px auto;">
-    <h2>Experience</h2>
+    <h2>Experience - Nasser Choudhri</h2>
 
     <p>
       I’ve worked on several academic and personal projects that involve full-stack development,
@@ -241,6 +345,57 @@
         <p class="card-tags">
           <span class="pill">UI/UX</span>
           <span class="pill">CSS Layout</span>
+        </p>
+      </div>
+    </div>
+  </section>
+  <section style="max-width:800px;margin:40px auto 60px auto;">
+    <h2>Experience - Matthew Llactahuamani</h2>
+
+    <p>
+      During my run through university, there have been many moments that involved creating code based on full-stack development, 
+      personal codes, and things of the sort. Some highlights are: 
+    </p>
+
+    <div class="card-list">
+      <div class="card-item">
+        <h3>ChatGPT Efficiency Evaluation (This Project)</h3>
+        <p>
+          Back-end lead for a Node.js and MongoDB-based system that evaluates ChatGPT across History,
+          Social Science, and Computer Security. Implemented the database and data injection into the MongoDB,
+          enabled middlewares to handle analysis, worked in cohesion with other partner to create analysis code.
+        </p>
+        <p class="card-tags">
+          <span class="pill">Back-end Lead</span>
+          <span class="pill">Node.js Integration</span>
+          <span class="pill">Analysis</span>
+        </p>
+      </div>
+
+      <div class="card-item">
+        <h3>SQL Querying, and Code Communication (External Course Project)</h3>
+        <p>
+          Closely realted to ChatGPT Efficiency Evaluation, this project consisted of analysing and querying for data
+          from .csv files with MySQL and console commands.
+        </p>
+        <p class="card-tags">
+          <span class="pill">JavaScript</span>
+          <span class="pill">SQL</span>
+          <span class="pill">Analysis</span>
+        </p>
+      </div>
+
+      <div class="card-item">
+        <h3>Portfolio &amp; Personal Projects</h3>
+        <p>
+          Worked on multiple full-stack applications for friends and family. Developed multiple mini-games 
+          for self-practice. Created multiple diagrams to intiate communication and flow in said projects
+        </p>
+        <p class="card-tags">
+          <span class="pill">UI/UX</span>
+          <span class="pill">CSS Layout</span>
+          <span class="pill">Full-stack development</span>
+          <span class="pill">Code Analysis</span>
         </p>
       </div>
     </div>
