Added a small submission form for /api/add testing

--- a/public/index.html
+++ b/public/index.html
@@ -258,19 +258,19 @@
       </div>
     </div>
   </section>
-  <section style="max-width:800px;margin:40px auto 60px auto;">
+<section style="max-width:800px;margin:40px auto 60px auto;">
     <h2>Education - Matthew Llactahuamani</h2>
     <p>
-      FILL IN TMR
+      In terms of education, I have only just begun my journey with York university in <strong> Ba Hons Information Technology </strong> where I focus mainly on full-stack development and database efficiency 
     </p>
 
     <div class="timeline">
       <div class="timeline-item">
         <div class="timeline-dot"></div>
         <div class="timeline-content">
-          <h3>FILL IN TMR</h3>
+          <h3>2021-Present: York University</h3>
           <p>
-            FILL IN TMR
+            I have been at York University for 4 years and I am completing my program in 2026. I learnt many things during my time here and hope to focus on developing software in the real world
           </p>
         </div>
       </div>
@@ -278,19 +278,9 @@
       <div class="timeline-item">
         <div class="timeline-dot"></div>
         <div class="timeline-content">
-          <h3>FILL IN TMR</h3>
+          <h3>2017-2021: St-Basils-The-Great-College-School</h3>
           <p>
-            FILL IN TMR
-          </p>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-dot"></div>
-        <div class="timeline-content">
-          <h3>FILL IN TMR</h3>
-          <p>
-            FILL IN TMR
+            As every person has to go through this area of life, this is simply my highschool where I learnt the basics of computer science and mathematics and other important subjects
           </p>
         </div>
       </div>
@@ -425,7 +415,11 @@
     <hr>
 
     <h3>API Demo: /api/add</h3>
-    <button id="testAddBtn">Test /api/add with 2 + 3</button>
+    <form id="addForm">
+      <label>A: <input type="number" id="Ainput" required></label><br><br>
+      <label>B: <input type="number" id="Binput" required></label><br><br>
+      <button id="testAddBtn">Test /api/add</button>
+    </form>
     <p id="addResult"></p>
 
     <hr>
