--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </section>
 </div>
 
-<div id="about" class="page" style="display:none;"> <img src="images/groupprojphoto3" class="page-banner">
+<div id="about" class="page" style="display:none;"> <img src="images/groupprojphoto3.png" class="page-banner">
   <section style="max-width:800px;margin:40px auto 60px auto;">
     <h2>About - Nasser Choudhri</h2>
 
@@ -229,7 +229,7 @@
 
 
 
-<div id="education" class="page" style="display:none;"><img src="images/groupprojphoto1" class="page-banner">
+<div id="education" class="page" style="display:none;"><img src="images/groupprojphoto1.png" class="page-banner">
   <section style="max-width:800px;margin:40px auto 60px auto;">
   <h2>Education – Nasser Choudhri</h2>
 
@@ -347,7 +347,7 @@
 </div>
 
 
-<div id="experience" class="page" style="display:none;"><img src="images/groupprojphoto2" class="page-banner">
+<div id="experience" class="page" style="display:none;"><img src="images/groupprojphoto2.png" class="page-banner">
   <section style="max-width:800px;margin:40px auto 60px auto;">
   <h2>Experience – Nasser Choudhri</h2>
 
